# agent-linker

./: .gitignore  BENCHMARK_TABOO.md  CLAUDE.md  CLEANUP_SUMMARY_FEB24.md  DOCUMENTATION_UPDATES.md  JUDGE_ANALYSIS_SUMMARY.md  JUDGE_REFRAMING.md  PHASE_8_AND_10_ABLATION.md  PHASE_CONTRIBUTION_ANALYSIS.md  PHASE_QUICK_REFERENCE.md  V26A_VS_V31_DETAILED_COMPARISON.md  V26A_VS_V31_MODIFIER_HANDLING.md  V31_FINAL_SUMMARY.md  analyze_v39_judge.py  pyproject.toml  run_ablation.py  run_v33_gpt.sh  test_analyzer.py  test_calibrated_judge.py  test_calibrated_judge_v39.py  test_context_guide.py  test_context_variants.py  test_convention_context.py  test_coref_debate_variants.py  test_coref_union.py  test_e2e_variance.py  test_e2e_variance_v33f.py  test_entity_classify.py  test_fewshot.py  test_fix1_llm.py  test_gpt_fault_model.py  test_gpt_prompt_fixes.py  test_gpt_prompts.py  test_heuristics.py  test_heuristics_deep.py  test_isupper_cascade.py  test_judge_analysis.py  test_judge_comprehensive.py  test_judge_context.py  test_magic_numbers.py  (+25 more)
archive/linkers/: ARCHIVE_STRATEGIES.md  archiv02.py  archiv03.py  archiv05.py  archiv06.py  archiv07.py  (+33 more)
doc/: limitations.md  linker_history.md  memory_notes.md  swattr_hyperparameters.md  v15_analysis.md  v22_documentation.md  v22_example_run.md  v22_pipeline.puml  v29_experiments.md  v6_cross_run_variance.md  v6_phase_analysis.md
paper/: approach.tex  dependency-analysis.md  fig-pipeline.tex
writing/: GOLD_STANDARD_FRICTION_ANALYSIS.md  ICSE_REVIEW_DEFENSE.md  analyze_gold_friction.py  gold_friction_results.txt  todo-eval.md
(+103 files in other folders)
